--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta charset="utf-8">
 		<title>熊爪动漫网-2016ChinaJoyCosplay嘉年华直播</title>
 		<!--使用Foundation 框架-->
-		<link href="https://tat.pics/v/1466256958218favicon.png" rel="shortcut icon">
+		<link href="https://tat.pics/v/1469688584838f.png" rel="shortcut icon">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="http://static.runoob.com/assets/foundation-5.5.3/foundation.min.css">
 		<link rel="stylesheet" href="http://static.runoob.com/assets/foundation-icons/foundation-icons.css">
@@ -17,30 +17,19 @@
 		<script src="http://static.runoob.com/assets/foundation-5.5.3/js/foundation.min.js"></script>
 		<script src="http://static.runoob.com/assets/foundation-5.5.3/js/vendor/modernizr.js"></script>
 		<style>
-		*{font-family:'PT serif',\5FAE\8EDF\6B63\9ED1\9AD4,\5FAE\8F6F\96C5\9ED1,\534E\6587\7EC6\9ED1;}
+		*{font-family:'PT serif',\5FAE\8EDF\6B63\9ED1\9AD4,\5FAE\8F6F\96C5\9ED1,\534E\6587\7EC6\9ED1;text-align:center;}
 			h1,h2,h3,h4,h5,h6,p{font-family:'PT serif',\5FAE\8EDF\6B63\9ED1\9AD4,\5FAE\8F6F\96C5\9ED1,\534E\6587\7EC6\9ED1;}
 		.pa10{padding:5%;}
-		.bgh1{background:#CCCC33;}
+		#header{background:#990033;}
+		.bgh1{background:#CC6600;}
 		.htdad{text-align:center;}
 		#htt{text-align:center;}
-			body:before {content: "";
-			background: url(https://tat.pics/v/14662436279203175d0fab2fb4316dd6bb8c020a4462309f7d32a.jpg);
-			position: fixed;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			z-index: -1;
 			
-			margin: -10px;
-			
-			}
-			img.avatar.photo {
-			border-radius: 100%;
-			-moz-border-radius: 100%;
-			}
-			.center{text-align:center;}
-		#mclogobg{}
+		#htt h1,#htt p{color:#FFFFFF;
+	text-shadow:2px 3px 2px #333333;
+	text-align:center;}
+	#htt{text-align:center;}
+	footer{padding:3%;background:#CCFF66;}
 		</style>
 	</head>
 	<body>
@@ -48,7 +37,7 @@
 			<nav class="top-bar" data-topbar>
 				<ul class="title-area">
 					<li class="name">
-						<h1><a href="#">熊爪动漫网-2016ChinaJoyCosplay嘉年华直播</a></h1>
+						<h1><a href="#">ChinaJoy Cosplay大赛</a></h1>
 					</li>
 					<li class="toggle-topbar menu-icon"><a href="#"><span>菜单</span></a></li>
 				</ul>
@@ -63,8 +52,12 @@
 			</nav>
 			<section >
 				<div class="htdad" id="htt">
-					<h1 >熊爪动漫网-2016ChinaJoyCosplay嘉年华直播</h1>
-					<p></p>
+					<h1 >ChinaJoy Cosplay大赛</h1>
+					<p>熊爪动漫网-2016ChinaJoyCosplay嘉年华直播现场！</p>
+					<a href="http://www.huya.com/1774104551" target="_blank">
+					<button type="button" class="button round">点击此处进入直播间</button>
+					</a>
+					<p>下面有直接的播放窗口哟！↓不支持的手机用户请戳按钮↑</p>
 				</div>
 			</section>
 		</header>
@@ -72,8 +65,9 @@
 			<section class="row pa10 " >
 			<h2 class="center ">2016ChinaJoyCosplay嘉年华直播画面</h2>
 			
-			<embed width="100%" height= "500" allownetworking="all" allowscriptaccess="always" src="http://weblbs.yystatic.com/s/78941969/2551842647/huyacoop.swf" quality="high" bgcolor="#000" wmode="window" allowfullscreen="true" allowFullScreenInteractive="true" type="application/x-shockwave-flash">
-				
+	<embed width="100%" height="500" allownetworking="all" allowscriptaccess="always" 
+src="http://weblbs.yystatic.com/s/78941969/2551842647/huyacoop.swf" quality="high" 
+bgcolor="#000" wmode="window" allowfullscreen="true" allowFullScreenInteractive="true" >			<!--
 				<section class="medium-4 columns">
 					<h3 class="center"> <i class="fi-home"></i>1</h3>
 					<p>1</p>
@@ -85,11 +79,12 @@
 				<section class="medium-4 columns">
 					<h3 class="center"><i class="fi-heart"></i>3</h3>
 					<p>3</p>
-				</section>
+				</section>-->
 				
 			</section>
 			
 		</section>
+		<!--
 		<section style="background:#FFFFFF" class="pa10">
 			<section class="row">
 				<section class="medium-8 columns">
@@ -102,7 +97,10 @@
 				</section>
 			</section>
 		</section>
-		<footer></footer>
+		-->
+		<footer id="footer">
+		<a href="http://acgbag.com" target="_blank">本页面技术支持：AcgBag - ShellV·泡</a>
+		</footer>
 	</body>
 	<script>//$(document).ready(function() {$(document).foundation();});
 		var 高度 = document.documentElement.clientHeight;
